style(security): improve the code style